infra/k8s/todo-task-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-task-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-task
  template:
    metadata:
      labels:
        app: todo-task
    spec:
      containers:
        - name: todo-task
          image: nerojz/todo-task
---
apiVersion: v1
kind: Service
metadata:
  name: todo-task-svc
spec:
  selector:
    app: todo-task
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
