infra/k8s/todo-ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: myprojects.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-auth-svc
                port:
                  number: 3000
          - path: /api/tasks/?(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-task-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-client-svc
                port:
                  number: 80
